@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- utils: Fixed '_OldCacheHeaders' and '_FSCacheHeaders' methods.
+  DateTimeErrors caused by invalid HTTP headers were not caught.
+
 - setup handlers: Added export/import support for member data tool settings.
 
 - MemberDataTool: Fixed tool initialization.
